public class DatabaseLibrary {

	public void connectToDatabase() {
		throw new UnsupportedOperationException();
	}

	public void saveMessages(String aMessage) {
		throw new UnsupportedOperationException();
	}

	public List<String> fetchMessages() {
		throw new UnsupportedOperationException();
	}
}