public class MongoDB {

	public void storeData(String aData) {
		throw new UnsupportedOperationException();
	}

	public String retrieveData(String aQuery) {
		throw new UnsupportedOperationException();
	}
}