public class NotificationService implements Observer {
	private String _serviceName;
	private List<String> _log;

	public void update(String aMessage) {
		throw new UnsupportedOperationException();
	}
}