public class Subject {
	private List<Observer> _observers;

	public void attach(Observer aObserver) {
		throw new UnsupportedOperationException();
	}

	public void detach(Observer aObserver) {
		throw new UnsupportedOperationException();
	}

	public void notifyObservers() {
		throw new UnsupportedOperationException();
	}
}